userChrome.css
/* ... */
/* Hide tab icon overlay for audio (mute button) */
.tab-icon-overlay:is([soundplaying], [muted], [activemedia-blocked]) {
  display: none !important;
}

/* Only show close tab button on hover (even active tab) */
#tabbrowser-tabs .tabbrowser-tab:not([pinned]):is([visuallyselected]):not(:hover) .tab-close-button {
  display: none !important;
}

/* Workspace menu active workspace indicator */
#PanelUI-zen-workspaces-list toolbarbutton {
  &.zen-workspace-button[active='true'] .zen-workspace-icon::before {
    content: '';
    position: absolute !important;
    top: 50% !important;
    transform: translateY(-50%) !important;
    left: -2px !important;
    width: 3px !important;
    height: 33.33% !important;
    background-color: var(--zen-primary-color) !important;
    border-radius: 4px !important;
  }
}

/* Remove borders from workspaces in popup */
.zen-workspace-icon {
  border: none !important;
}

/* Enable/disable workspace icon strip */
@media -moz-pref('uc.zenftw.hide-workspace-icon-strip') {
  #zen-workspaces-button {
    display: none !important;
  }
}

/* Set text properties of current workspace indicator */
.zen-current-workspace-indicator-name {
  color: var(--lwt-text-color) !important;
  opacity: 1 !important;
}

/* Workspace indicator (used as button / switcher) */
@media (-moz-pref('zen.workspaces.show-workspace-indicator')) and (-moz-pref('uc.zenftw.workspace-button')) {
  #urlbar {
    margin-top: 5px !important;
  }

  #zen-current-workspace-indicator-container {
    order: -1;
    margin-bottom: 40px !important;
  }

  .zen-current-workspace-indicator {
    justify-content: center !important;
    --zen-workspace-indicator-height: 10px !important;
    margin-top: calc(var(--zen-workspace-indicator-height) - 5) !important;

    &::before {
      transition: background 0.3s ease-in-out !important;
    }
  }
}

/* Glance buttons */
#zen-glance-sidebar-container {
  & toolbarbutton {
    background: color-mix(in srgb, var(--zen-primary-color), black 6%) !important;
  }

  & toolbarbutton:hover {
    filter: brightness(115%) !important;
    transition: filter 0.3s ease-in-out !important;
  }
}

/* Glance tab indicator settings */
.tabbrowser-tab:is([zen-essential]) stack:has([zen-glance-tab='true']) .tab-stack {
  padding: 3px !important;
  transform: translateX(5%) translateY(8%) !important;
}

.tabbrowser-tab:is([zen-essential]) stack:has([zen-glance-tab='true']) .tab-stack .tab-background {
  background: unset !important;
  box-shadow: unset !important;
  border: unset !important;
}

.tabbrowser-tab:is([zen-essential]):hover stack:has([zen-glance-tab='true']) .tab-stack .tab-background {
  background: unset !important;
}

.tabbrowser-tab:not([zen-essential]) stack:has([zen-glance-tab='true']) .tab-stack .tab-background {
  background: color-mix(in srgb, var(--zen-colors-primary) 45%, transparent) !important;
  box-shadow: unset !important;
  border: 1px solid var(--zen-colors-border) !important;
}

.tabbrowser-tab:not([zen-essential]):has([multiselected='true'], [selected])
  stack:has([zen-glance-tab='true'])
  .tab-stack
  .tab-background {
  border: 1px solid color-mix(in srgb, var(--zen-colors-primary) 100%, white 15%) !important;
}

/* Glance open animation fix */
.browserSidebarContainer.zen-glance-background.deck-selected {
  filter: blur(5px) brightness(65%);
  transition: filter 0.1s ease-in-out;
}

/* Colorize media player */
#zen-media-controls-toolbar > toolbaritem {
  background-color: color-mix(in srgb, var(--zen-colors-primary) 100%, black 55%) !important;
}

/* Hide media player playing animation */
#zen-media-controls-toolbar {
  & #zen-media-focus-button::after {
    display: none !important;
  }
}

/* Hide URL bar from sidebar (in compact mode) still accessible as floating popup */
/* FIX: Disabled for now, as it breaks the ability to focus the URL properly */
/*
@media (-moz-pref('zen.view.compact.hide-tabbar')) and (-moz-pref('uc.zenftw.hide-sidebar-urlbar-compact')) {
  :root[zen-compact-mode='true'] {
    #nav-bar:not(:has(#urlbar[breakout-extend='true'])) {
      visibility: collapse;
    }
  }
}
*/

/* Add visual cue to URL bar when opening in a new tab */
#urlbar[zen-newtab='true'] {
  #identity-icon {
    fill-opacity: 1 !important;
    list-style-image: url('chrome://browser/skin/zen-icons/new-tab-image.svg') !important;
  }

  &[open] #identity-icon-box::after {
    content: 'New Tab' !important;
    padding-left: 6px !important;
  }
}

/* Adjust background of URL bar popup */
#urlbar[breakout-extend='true'] > #urlbar-background {
  background: color-mix(in srgb, var(--zen-colors-primary) 42%, rgba(1, 1, 1, 0.55)) !important;
  border-radius: 16px !important;
  border-color: transparent !important;
}

/* Adjust border / background color of URL bar (not floating) */
#urlbar-background {
  background-color: color-mix(in srgb, var(--zen-colors-primary) 45%, var(--zen-colors-tertiary) 92%) !important;
  border: 1px solid var(--zen-colors-border) !important;
}

/* Adjust color of page title in URL bar popup */
.urlbarView-title {
  color: var(--lwt-text-color) !important;
}

/* Adjust color of URL in URL bar popup */
.urlbarView-url {
  color: color-mix(in srgb, var(--zen-colors-primary) 95%, white 37%) !important;
}

/* Ctrl-Tab label text color */
#ctrlTab-panel .ctrlTab-label {
  color: var(--lwt-text-color) !important;
}

/* Animations related to tabs (normal/pinned/essentials) */
.close-icon {
  transition: background-color 0.3s ease-in-out !important;
}

.tab-reset-button {
  transition: background-color 0.3s ease-in-out !important;
}

.tabbrowser-tab[pinned][zen-essential='true'] .tab-stack .tab-background {
  transition: background-color 0.3s ease-in-out !important;
}
/* ... */

